--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -4,6 +4,7 @@
     <string name="duckDuckGoPrivacySimplified">Поверителност, опростена.</string>
     <string name="yes">да</string>
     <string name="no">Не</string>
+    <string name="search">Търсене</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Посетете Настройки, за да търсите и сърфирате с DuckDuckGo всеки път.</string>
@@ -384,12 +385,14 @@
     <string name="daxIntroCtaText">Сега, отворете един от любимите си сайтове! &lt;br/&gt;&lt;br/&gt;Ще блокирам тракерите, за да не ви шпионират. Също така ще надстроя сигурността на вашата връзка, ако е възможно. &#128274;</string>
     <string name="daxEndCtaText">&lt;br/&gt;&lt;br/&gt;Запомнете: всеки път, когато браузвате с мен,подрязвам крилцата на някоя неприятна реклама. &#128077;</string>
     <string name="daxSerpCtaText">Търсенията ви в DuckDuckGo са анонимни и никога не съхранявам историята на вашите търсения. Никога. &#128588;</string>
-    <string name="daxNonSerpCtaText">Всеки сайт има степен на поверителност. Докоснете, за да видите как защитих поверителността ви.&lt;br/&gt;&lt;br/&gt;Искате ли да пробвате нещо различно? Опитайте да изчистите данните си, като натиснете бутона за пожар.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
         <item quantity="other">&#160;и &lt;b&gt;%d други&lt;/b&gt; се опитваха да ви проследят тук. &lt;br/&gt;&lt;br/&gt;Блокирах ги!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</item>
     </plurals>
     <string name="daxTrackersBlockedCtaZeroText">&#160;се опитваше да ви проследи тук. &lt;br/&gt;&lt;br/&gt;Блокирах го!&lt;br/&gt;&lt;br/&gt; ☝️Вижте URL лентата, за да разберете кой се опитва да ви проследи, когато посещавате нов сайт.️</string>
+    <string name="daxNonSerpCtaText">Докато докосвате и скролвате, ще блокирам досадните тракери. &lt;br/&gt;&lt;br/&gt;Продължавайте - не спирайте да сърфирате!</string>
+    <string name="daxMainNetworkOwnedCtaText">Внимание! %s е собственост на %s.&lt;br/&gt;&lt;br/&gt; %s тракери дебнат %s в топ уебсайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не могат да виждат вашата активност в тези сайтове.</string>
+    <string name="daxMainNetworkCtaText">Внимание! %s е огромна мрежа за проследяване.&lt;br/&gt;&lt;br/&gt; Техните тракери дебнат %s в топ сайтове &#128561;, но не се притеснявайте! &lt;br/&gt;&lt;br/&gt;Ще ги блокирам, %s за да не виждат вашата активност в тези сайтове.</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Официална информация и съвети относно COVID-19.</string>
