--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -4,6 +4,7 @@
     <string name="duckDuckGoPrivacySimplified">Ochrana soukromí, zjednodušená.</string>
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
+    <string name="search">Vyhledávání</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Přejděte do Nastavení a vždy vyhledávejte a prohlížejte s DuckDuckGo.</string>
@@ -388,7 +389,6 @@
     <string name="daxIntroCtaText">Dále zkuste navštívit některý z Vašich oblíbených webů! &lt;br/&gt;&lt;br/&gt;Zablokujeme sledovače, aby Vás nemohli špehovat. Pokud to bude možné, upgraduji také zabezpečení Vašeho připojení. &#128274;</string>
     <string name="daxEndCtaText">Máte to! &lt;br/&gt;&lt;br/&gt;Pamatujte: pokaždé, když internet procházíte se mnou, hrozným reklamám jsou přistřižena křídla. &#128077;</string>
     <string name="daxSerpCtaText">Vaše vyhledávání DuckDuckGo jsou anonymní a historii Vašeho vyhledávání nikdy nikam neukládáme. Vůbec nikdy. &#128588;</string>
-    <string name="daxNonSerpCtaText">Každý web má svůj stupeň ochrany osobních údajů. Klepnutím na něj si zobrazíte, jak jsem chránil Vaše soukromí.&lt;br/&gt;&lt;br/&gt;Chcete zkusit něco zajímavého? Zkuste stiskem tlačítka palby vymazat svá data.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
         <item quantity="few">&#160;a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
@@ -396,6 +396,9 @@
         <item quantity="other">&#160;a &lt;b&gt;%d další&lt;/b&gt; se Vás tu snažili sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme je!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</item>
     </plurals>
     <string name="daxTrackersBlockedCtaZeroText">&#160;se Vás tady snažil sledovat. &lt;br/&gt;&lt;br/&gt;Zablokovali jsme to!&lt;br/&gt;&lt;br/&gt; ☝️Když navštívíte nový web, můžete se do adresního řádku prohlížeče podívat, kdo se Vás snaží sledovat.</string>
+    <string name="daxNonSerpCtaText">Zatímco Vy budete klepat a přejíždět, já budu blokovat zlovolné sledovače. &lt;br/&gt;&lt;br/&gt;Nenechejte se rušit — pokračujte v prohlížení!</string>
+    <string name="daxMainNetworkOwnedCtaText">Hlavy vzhůru! %s vlastní společnost %s.&lt;br/&gt;&lt;br/&gt; Sledovatelé %s číhají na přibližně %s významných webů &#128561;, ale netrapte se!&lt;br/&gt;&lt;br/&gt;Já %s zablokuji, aby Vaši aktivitu na těchto webech neviděl.</string>
+    <string name="daxMainNetworkCtaText">Hlavy vzhůru! %s je významná sledovací síť.&lt;br/&gt;&lt;br/&gt; Jejich sledovatelé číhají na přibližně %s významných webů &#128561;, ale netrapte se!&lt;br/&gt;&lt;br/&gt;Já %s zablokuji, aby Vaši aktivitu na těchto webech neviděl.</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Odebírejte oficiální informace a tipy o COVID-19.</string>
