--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,6 +4,7 @@
     <string name="duckDuckGoPrivacySimplified">Datenschutz – leicht gemacht.</string>
     <string name="yes">Ja</string>
     <string name="no">Nein</string>
+    <string name="search">Suche</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Navigiere zu Einstellungen, damit du in Zukunft immer mit DuckDuckGo suchen und browsen kannst.</string>
@@ -384,12 +385,14 @@
     <string name="daxIntroCtaText">Versuchen Sie als nächstes, eine Ihrer Lieblingsseiten zu besuchen! &lt;br/&gt;&lt;br/&gt;Ich blockiere Tracker, damit sie Sie nicht ausspionieren können. Ich werde auch die Sicherheit Ihrer Verbindung verbessern, wenn das möglich ist. &#128274;</string>
     <string name="daxEndCtaText">Gut gemacht! &lt;br/&gt;&lt;br/&gt;Hinweis Jedes Mal, wenn Sie mit mir surfen, verliert eine gruselige Anzeige ihre Flügel. &#128077;</string>
     <string name="daxSerpCtaText">Ihre DuckDuckGo-Suchanfragen sind anonym und ich speichere niemals Ihren Suchverlauf. Nie. &#128588;</string>
-    <string name="daxNonSerpCtaText">Jede Website hat eine Datenschutzstufe. Tippen Sie darauf, um zu sehen, wie ich Ihre Privatsphäre geschützt habe.&lt;br/&gt;&lt;br/&gt;Sie haben Lust darauf? Versuchen Sie, Ihre Daten zu löschen, indem Sie den Feuerknopf drücken.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;und &lt;b&gt;%d andere&lt;/b&gt; haben versucht, Sie hier zu tracken. &lt;br/&gt;&lt;br/&gt;Ich habe sie blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu tracken, wenn Sie eine neue Website besuchen.</item>
         <item quantity="other">&#160;und &lt;b&gt;%d andere&lt;/b&gt; haben versucht, Sie hier zu tracken. &lt;br/&gt;&lt;br/&gt;Ich habe sie blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu tracken, wenn Sie eine neue Website besuchen.</item>
     </plurals>
     <string name="daxTrackersBlockedCtaZeroText">&#160;hat versucht, Sie hier zu tracken. &lt;br/&gt;&lt;br/&gt;Ich habe das blockiert!&lt;br/&gt;&lt;br/&gt; ☝️Sie können in der URL-Leiste überprüfen, wer versucht, Sie zu tracken, wenn Sie eine neue Website besuchen.</string>
+    <string name="daxNonSerpCtaText">Während Sie tippen und scrollen, blockiere ich lästige Tracker. &lt;br/&gt;&lt;br/&gt;Vorwärts — surfen Sie weiter!</string>
+    <string name="daxMainNetworkOwnedCtaText">Augen auf! %s gehört %s.&lt;br/&gt;&lt;br/&gt; Die Tracker von %s lauern auf ungefähr %s der Top-Websites &#128561;, aber keine Sorge! &lt;br/&gt;&lt;br/&gt;Ich werde %s daran hindern, Ihre Aktivitäten auf diesen Websites zu verfolgen.</string>
+    <string name="daxMainNetworkCtaText">Augen auf! %s ist ein wichtiges Tracking-Netzwerk.&lt;br/&gt;&lt;br/&gt; Ihre Tracker lauern auf ungefähr %s der Top-Websites &#128561;, aber keine Sorge! &lt;br/&gt;&lt;br/&gt;Ich werde %s daran hindern, Ihre Aktivitäten auf diesen Websites zu sehen.</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Offizielle COVID-19 Infos &amp; Tipps.</string>
