--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -4,6 +4,7 @@
     <string name="duckDuckGoPrivacySimplified">Adatvédelem, egyszerűsítve.</string>
     <string name="yes">Igen</string>
     <string name="no">Nem</string>
+    <string name="search">Keresés</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">A Beállítások oldalon bármikor kereshetsz és böngészhetsz a DuckDuckGo segítségével.</string>
@@ -384,12 +385,14 @@
     <string name="daxIntroCtaText">A következő lépésben látogassa meg az egyik kedvenc webhelyét! &lt;br/&gt;&lt;br/&gt;Én blokkolom a nyomkövetőket, hogy ne tudjanak kémkedni. Ha lehet, a kapcsolat biztonságát is javítom. &#128274;</string>
     <string name="daxEndCtaText">Megvan, ez az! &lt;br/&gt;&lt;br/&gt;Ne feledje: minden alkalommal, amikor velem végzi a böngészést, a hátborzongató hirdetés elveszíti az erejét. &#128077;</string>
     <string name="daxSerpCtaText">A DuckDuckGo keresések névtelenek, és én soha nem tárolom el a keresési előzményeket. Soha. &#128588;</string>
-    <string name="daxNonSerpCtaText">Minden webhely rendelkezik adatvédelmi besorolással. Koppintson rá, hogy megvédje a magánszféráját.&lt;br/&gt;&lt;br/&gt;Van kedve hozzá? Próbálja meg törölni az adatokat a Kidob gomb megnyomásával.</string>
     <plurals name="daxTrackersBlockedCtaText">
         <item quantity="one">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
         <item quantity="other">&#160;és &lt;b&gt;%d másik&lt;/b&gt; itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam őket!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</item>
     </plurals>
     <string name="daxTrackersBlockedCtaZeroText">&#160;itt próbálta meg követni. &lt;br/&gt;&lt;br/&gt;blokkoltam!&lt;br/&gt;&lt;br/&gt; ☝️Ellenőrizheti az URL-sávot, hogy megtudja, ki próbálja meg követni, amikor új webhelyre látogat.</string>
+    <string name="daxNonSerpCtaText">Ahogy megérinti és görgeti, én blokkolni fogom a bosszantó nyomkövetőket. &lt;br/&gt;&lt;br/&gt;Menjen tovább - folytassa a böngészést!</string>
+    <string name="daxMainNetworkOwnedCtaText">Fel a fejjel! A(z) %s tulajdonosa a(z) %s.&lt;br/&gt;&lt;br/&gt; %s nyomkövetői ott leselkednek a legfontosabb webhelyek %s oldalán &#128561; de ne aggódjon! &lt;br/&gt;&lt;br/&gt;meg fogom akadályozni, hogy a(z) %s láthassa az Ön tevékenységeit azokon az oldalakon.</string>
+    <string name="daxMainNetworkCtaText">Fel a fejjel! A(z) %s egy nagy nyomkövető hálózat.&lt;br/&gt;&lt;br/&gt; A nyomkövetői ott leselkednek a legfontosabb webhelyek %s oldalán &#128561;, de ne aggódjon! &lt;br/&gt;&lt;br/&gt;meg fogom akadályozni, hogy a(z) %s láthassa az Ön tevékenységét azokon a webhelyeken.</string>
 
     <!-- Covid Cta-->
     <string name="covidCtaText">Kapjon hivatalos információt és tippeket a COVID-19-ről.</string>
